--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 	"dependencies": {
 		"axios": "^0.20.0",
 		"express": "^4.17.1",
+		"heroku": "^7.42.13",
 		"morgan": "^1.10.0",
 		"pg": "^8.3.3",
 		"react": "^16.13.1",
